# GAuth

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
gauthy/: __main__.py  gen_totp.py
